--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,19 @@
  * This is a general purpose Gradle build.
  * To learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.3/samples
  */
+
+apply plugin: 'java'
+buildscript {
+
+	repositories {
+	
+		mavenCentral()
+	
+	}
+
+	dependencies {
+	
+		classpath 'mysql:mysql-connector-java:5.1.16'
+	
+	} 
+}
